# football-fixtures

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/fixtures/: __main__.py  main.py
tests/: test_cli.py
