[project]
name = "football-fixtures"
version = "0.1.0"
description = "Football fixture planner CLI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "requests-cache>=1.2.1",
]
lint = [
    "ruff>=0.9.9",
]
