[project]
name = "football-fixtures"
version = "0.1.0"
description = "Football fixture planner CLI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[tool.poetry.scripts]
fixtures = "fixtures.main:app"

[tool.poetry]
packages = [{include = "fixtures", from = "src"}]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "requests-cache>=1.2.1",
]
lint = [
    "ruff>=0.9.9",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
